tests/sksl/errors/MatrixToVectorCast3x3.glsl
### Compilation failed:

error: 4: invalid argument to 'half' constructor (expected a number or bool, but found 'half3x3')
error: 5: 'half3x3' is not a valid parameter to 'half2' constructor
error: 6: 'half3x3' is not a valid parameter to 'half3' constructor
error: 7: 'half3x3' is not a valid parameter to 'half4' constructor
4 errors
